--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -17,6 +17,18 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "case-studies"
+    label: "Case Studies"
+    folder: "site/content/case-studies"
+    create: true
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Client Name", name: "client_name", widget: "string"}
+      - {label: "Client Logo", name: "client_logo", widget: "image"}
+      - {label: "Our Role", name: "our_role", widget: "string"}
+      - {label: "Website", name: "website", widget: "string", required: false}
+      - {label: "Services", name: "website", widget: "string", required: false}
   - name: "pages"
     label: "Pages"
     files:
