--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -13,15 +13,18 @@ collections: # A list of collections the CMS should be able to edit
     create: true
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Date", name: "date", widget: "datetime"}
-      - {label: "Name", name: "name", widget: "string"}
-      - {label: "Logo", name: "logo", widget: "image"}
-      - {label: "Role", name: "role", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Client Name", name: "client_name", widget: "string"}
+      - {label: "Client Logo", name: "client_logo", widget: "image"}
+      - {label: "Our Role", name: "our_role", widget: "string"}
       - {label: "Website", name: "website", widget: "string", required: false}
       - {label: "Services", name: "services", widget: "string", required: false}
       - {label: Showcase, name: showcase, widget: object, fields: [
-          {label: Heading, name: heading, widget: string},
-          {label: Images, name: images, widget: list, fields: [{label: Image, name: image, widget: image},
-          {label: Text, name: text, widget: text}]}
+          {label: Images, name: images, widget: list, fields:
+            [
+              {label: Title, name: title, widget: string},
+              {label: Image, name: image, widget: image},
+              {label: Description, name: description, widget: string}
+            ]
+          }
         ]}
-
