--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -3,20 +3,21 @@ backend:
   repo: <% GITHUB_REPOSITORY %> # Gulp will replace this with your GitHub repository
   branch: master # Branch to update (master by default)
 
-media_folder: "site/static/img" # Folder where user uploaded files should go
-public_folder: "img"
+media_folder: site/static/img # Folder where user uploaded files should go
+public_folder: img
 
 collections: # A list of collections the CMS should be able to edit
-  - name: "case-studies"
-    label: "Case Studies"
-    folder: "site/content/case-studies"
+  - name: case-studies
+    label: Case Studies
+    folder: site/content/case-studies
     create: true
     fields:
-      - {label: Title, name: title, widget: "string"}
-      - {label: "Publish Date", name: date, widget: "datetime"}
-      - {label: "Client Name", name: client_name, widget: "string"}
-      - {label: Client Logo, name: client_logo, widget: "image"}
-      - {label: "Our Role", name: our_role, widget: string}
+      - {label: Title, name: title, widget: string}
+      - {label: Publish Date, name: date, widget: datetime}
+      - {label: Slogan, name: slogan, widget: string}
+      - {label: Client Name, name: client_name, widget: string}
+      - {label: Client Logo, name: client_logo, widget: image}
+      - {label: Our Role, name: our_role, widget: string}
       - {label: Website, name: website, widget: string, required: false}
       - {label: Services, name: services, widget: string, required: false}
       - {label: Showcase, name: showcase, widget: object, fields: [
