--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -21,11 +21,14 @@ collections: # A list of collections the CMS should be able to edit
       - {label: Website, name: website, widget: string, required: false}
       - {label: Services, name: services, widget: string, required: false}
       - {label: Showcase, name: showcase, widget: object, fields: [
-          {label: Images, name: images, widget: list, fields:
-            [
-              {label: Title, name: title, widget: string},
-              {label: Image, name: image, widget: image},
-              {label: Description, name: description, widget: string}
-            ]
-          }
+          {label: Sections, name: sections, widget: list, fields: [
+            {label: Title, name: title, widget: string},
+            {label: Images, name: images, widget: list, fields:
+              [
+                {label: Title, name: title, widget: string},
+                {label: Image, name: image, widget: image},
+                {label: Description, name: description, widget: string}
+              ]
+            }
+          ]}
         ]}
